Got message protocol working

--- a/index.html
+++ b/index.html
@@ -19,5 +19,9 @@
       <button id="websocketConnection">Open Websocket</button>      
       <button id="requestImage">Request Image</button>
     </div>
+
+    <div id="plot">
+      
+    </div>
   </body>
 </html>
