Can send image from server to browser now

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       <button id="requestImage">Request Image</button>
     </div>
 
-    <div id="plot">
-      
+    <div id="plot_area">
+      <img id="plot"/>
     </div>
   </body>
 </html>
