Started implementing state variables to keep track of brewery state

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h1>Flapibrew</h1>
     <div>
       <button id="websocketConnection">Open Websocket</button>      
-      <button id="requestImage">Request Image</button>
+      <button id="plotting">Request Image</button>
     </div>
 
     <div id="plot_area">
