--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
       <button id="websocketConnection">Open Websocket</button>      
       <button id="plotting">Request Image</button>
     </div>
-
+    <div id="temperature">
+    </div>
     <div id="plot_area">
       <img id="plot"/>
     </div>
