Added pump and heater to status

--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
       <button id="websocketConnection">Open Websocket</button>      
       <button id="plotting">Request Image</button>
     </div>
-    <div id="temperature">
+   Temperature:  <div id="temperature">
+    </div>
+    Pump: <div id="pumpState">
+    </div>
+    Heater: <div id="heaterState">
     </div>
     <div id="plot_area">
       <img id="plot"/>
