Added PID control to status message

--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
 	    <div id="pumpState" class="span2"></div>
 	  </div>
 	  <div class="row">
+	    <div class="span2">PID Control:</div>
+	    <div id="PIDState" class="span2"></div>
+	  </div>
+	  <div class="row">
 	    <div class="span2">Heater:</div>
 	    <div id="heaterState" class="span2"></div>
 	  </div>
