Fixed layout issues in bootstrap 3.1.1

--- a/index.html
+++ b/index.html
@@ -20,32 +20,32 @@
       	<h1>Flapibrew</h1>
       </div>
       <div class="row">
-      	<div class=".col-md-4">
+      	<div class="col-md-4">
       	  <div class="row">
-      	    <div class=".col-md-6">
+      	    <div class="col-md-6">
       	    </div>
-      	    <div class=".col-md-6">
+      	    <div class="col-md-6">
       	      <button id="plotting" class="btn">Start monitoring</button>
       	    </div>
       	  </div>
       	  <div class="row">
-      	    <div class=".col-md-6">Temperature:</div>
-      	    <div id="temperature" class=".col-md-6"></div>
+      	    <div class="col-md-6">Temperature:</div>
+      	    <div id="temperature" class="col-md-6"></div>
       	  </div>
       	  <div class="row">
-      	    <div class=".col-md-6">Pump:</div>
-      	    <div id="pumpState" class=".col-md-6"></div>
+      	    <div class="col-md-6">Pump:</div>
+      	    <div id="pumpState" class="col-md-6"></div>
       	  </div>
       	  <div class="row">
-      	    <div class=".col-md-6">PID Control:</div>
-      	    <div id="PIDState" class=".col-md-6"></div>
+      	    <div class="col-md-6">PID Control:</div>
+      	    <div id="PIDState" class="col-md-6"></div>
       	  </div>
       	  <div class="row">
-      	    <div class=".col-md-6">Heater:</div>
-      	    <div id="heaterState" class=".col-md-6"></div>
+      	    <div class="col-md-6">Heater:</div>
+      	    <div id="heaterState" class="col-md-6"></div>
       	  </div>
       	</div>
-      	<div class=".col-md-8">
+      	<div class="col-md-8">
       	    <div id="plotArea">
       	      <img id="plot"/>
       	    </div>
