Start button now only starts aquisiton, plus can select backend

--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
       </div>
       <div class="row">
       	<div class="col-md-6">
+	  <div class="row">
+	    <div class="col-md-4">Backend:</div>
+	    <div class="col-md-8">
+	      <div class="input-group">
+		<input type="text" class="form-control" placeholder="dummy" id="backend"/>
+	      </div>
+	    </div>
+	  </div>
       	  <div class="row">
       	    <div class="col-md-4">Temperature:</div>
       	    <div id="temperature" class="col-md-4"></div>
