--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
       	    <div class="col-md-4">Pump:</div>
       	    <div id="pumpState" class="col-md-4"></div>
 	    <div class="col-md-4">
-	      <button class="btn btn-default form-control" type="button">Toggle</button>
+	      <button class="btn btn-default form-control" type="button" id="pump-btn">Toggle</button>
       	    </div>
 	  </div>
       	  <div class="row">
       	    <div class="col-md-4">PID Control:</div>
       	    <div id="PIDState" class="col-md-4"></div>
 	    <div class="col-md-4">
-		<button class="btn btn-default form-control" type="button">Toggle</button>
+		<button class="btn btn-default form-control" type="button" id="pid-btn">Toggle</button>
       	    </div>
 	  </div>
       	  <div class="row">
