Dutycycle can now be updated

--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
       	    <div id="heaterState" class="col-md-4"></div>
 	    <div class="col-md-4">
 	      <div class="input-group">
-		<input type="text" class="form-control" />
+		<input type="text" class="form-control" / id="heater">
 		<span class="input-group-btn">
-		  <button class="btn btn-default" type="button">Update</button>
+		  <button class="btn btn-default" type="button" id="heater-btn">Update</button>
 		</span>
 	      </div>
       	    </div>
