p and i values work for dummy brewery

--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
 	  </div>
       	  <div class="row">
       	    <div class="col-md-4">Heater:</div>
-      	    <div id="dutyCycleState" class="col-md-4"></div>
+      	    <div id="dutycycleState" class="col-md-4"></div>
 	    <div class="col-md-4">
 	      <div class="input-group">
-		<input type="text" class="form-control" / id="heater">
-		<span class="input-group-btn">
-		  <button class="btn btn-default" type="button" id="heater-btn">Update</button>
-		</span>
+	  	<input type="text" class="form-control" id="heater"/>
+	  	<span class="input-group-btn">
+	  	  <button class="btn btn-default" type="button" id="heater-btn">Update</button>
+	  	</span>
 	      </div>
       	    </div>
       	  </div>
