Added heater state

--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
 	    </div>
       	  </div>
       	  <div class="row">
+      	    <div class="col-md-4">Heater:</div>
+      	    <div id="heater" class="col-md-4"></div>
+	    <div class="col-md-4">
+	    </div>
+      	  </div>
+      	  <div class="row">
       	    <div class="col-md-4">Pump:</div>
       	    <div id="pumpState" class="col-md-4"></div>
 	    <div class="col-md-4">
