Arduino now controllable from flapibrew

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Totally amazing flapibrew</title>
+    <title>Totally</title>
     <meta charset="utf-8" />
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -10,14 +10,14 @@
  
   <body>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="js/jquery-1.11.0.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
     <script src="main.js"></script>
 
     <div class="container">
       <div class="page-header">
-      	<h1>Flapibrew</h1>
+      	<h1>Flapibrew <small>Controlling Your Arduino Yun Powered Mashtun</small></h1>
       </div>
       <div class="row">
       	<div class="col-md-6">
@@ -29,7 +29,7 @@
 	      </div>
 	    </div>
 	    <div class="col-md-4">
-      	      <button id="plotting" class="btn btn-default form-control">Start</button>
+      	      <button id="start-btn" class="btn btn-default form-control">Start</button>
 	    </div>
 	  </div>
       	  <div class="row">
@@ -97,7 +97,7 @@
 	</div>
 	<div class="col-md-6">
       	  <div id="plotArea">
-      	    <img id="plot"/>
+      	    <img id="plot"/ width="100%">
       	  </div>
 	</div>
       </div>
