--- a/index.html
+++ b/index.html
@@ -33,16 +33,28 @@
 	    </div>
 	  </div>
       	  <div class="row">
+      	    <div class="col-md-4">Heater:</div>
+      	    <div id="heater" class="col-md-4"></div>
+	    <div class="col-md-4">
+	    </div>
+      	  </div>
+      	  <div class="row">
       	    <div class="col-md-4">Temperature:</div>
       	    <div id="temperature" class="col-md-4"></div>
 	    <div class="col-md-4">
 	    </div>
       	  </div>
       	  <div class="row">
-      	    <div class="col-md-4">Heater:</div>
-      	    <div id="heater" class="col-md-4"></div>
+      	    <div class="col-md-4">Setpoint:</div>
+      	    <div id="setpointState" class="col-md-4"></div>
 	    <div class="col-md-4">
-	    </div>
+	      <div class="input-group">
+	  	<input type="text" class="form-control" id="setpoint"/>
+	  	<span class="input-group-btn">
+	  	  <button class="btn btn-default" type="button" id="setpoint-btn">Update</button>
+	  	</span>
+	      </div>
+      	    </div>
       	  </div>
       	  <div class="row">
       	    <div class="col-md-4">Pump:</div>
